@@ -736,7 +736,7 @@ Anthony Shipman <als@aaii.oz.au>
 Tobin Bergen-Hill <tbhill@dctd.saic.com>
 Toshio Hori <toshi@etl.go.jp>
 John Mink <John.Mink@nl.origin-it.com>
-Duane Binder <dbinder@globalmt.com>
+Duane Binder <duane.binder@veritas.com>
 Randall Sharo <rasb@eci.esys.com>
 Dave Madden <dhm@mersenne.com>
 Cliff_H_Campbell <Cliff_H_Campbell@res.raytheon.com>
